@startuml

title __DOMOTIX > VIEW > MENUS > MENUUNITA's Class Diagram__\n

namespace src.domotix.view.menus.menuUnita {
    class src.domotix.view.menus.menuUnita.MenuUnitaF {
    }

    class src.domotix.view.menus.menuUnita.MenuUnitaM {
    }

    namespace gestioneUnita {
        class src.domotix.view.menus.menuUnita.gestioneUnita.MenuGestioneUnitaF {
        }

        class src.domotix.view.menus.menuUnita.gestioneUnita.MenuGestioneUnitaM {
        }
    }

    namespace gestioneStanza {
        class src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaF {
        }

        class src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaM {
        }

        namespace gestioneArtefatto {
            class src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoF {
            }

            class src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoM {
            }
        }
    }
}

src.domotix.view.menus.menuUnita.MenuUnitaM --> src.domotix.view.menus.menuUnita.gestioneUnita.MenuGestioneUnitaM
src.domotix.view.menus.menuUnita.MenuUnitaM --> src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaM
src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaM --> src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoM
src.domotix.view.menus.menuUnita.MenuUnitaF --> src.domotix.view.menus.menuUnita.gestioneUnita.MenuGestioneUnitaF
src.domotix.view.menus.menuUnita.MenuUnitaF --> src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaF
src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaF --> src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoF

src.domotix.view.menus.menuUnita.MenuUnitaM --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.MenuUnitaF --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.gestioneUnita.MenuGestioneUnitaM --> src.domotix.controller.Modificatore
src.domotix.view.menus.menuUnita.gestioneUnita.MenuGestioneUnitaM --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.gestioneUnita.MenuGestioneUnitaF --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaM --> src.domotix.controller.Modificatore
src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaM --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaF --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.gestioneStanza.MenuGestioneStanzaF --> src.domotix.controller.Modificatore
src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoM --> src.domotix.controller.Modificatore
src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoM --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoF --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuUnita.gestioneStanza.gestioneArtefatto.MenuGestioneArtefattoF --> src.domotix.controller.Modificatore

@enduml
